# indexing

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
codev/plans/: 0001-qul-tafsir-agentset-converter.md
codev/protocols/spider/: protocol.md
codev/reviews/: 0001-qul-tafsir-agentset-converter.md
codev/specs/: 0001-qul-tafsir-agentset-converter.md
indexing/: .gitignore  README.md  qul.py
indexing/sample_output_data/fiqh_cards/: sample_claude.json
indexing/src/fiqh_card_converter/: claude_cli.py  claude_converter.py
indexing/src/qul_tafsir/: converter.py
sample_input_data/fiqh_cards/: sample.docx
src/qul_tafsir/: cli.py  converter.py
