[project]
name = "indexing"
version = "0.1.0"
description = "Converters for Islamic text data - Fiqh cards and Tafsir processing"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "agentset>=0.4.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "vectara>=0.3.5",
    "lxml>=6.0.2",
]

[project.scripts]
fiqh-claude = "fiqh_card_converter.claude_cli:app"
# TODO: qul-tafsir needs to be ported from Vectara to Goodmem
# qul-tafsir = "qul_tafsir.cli:app"

[tool.uv]
package = true
